--- a/.github/workflows/bb-deploy.yml
+++ b/.github/workflows/bb-deploy.yml
@@ -82,4 +82,4 @@ jobs:
         with: 
           buildbear-token: "${{ secrets.BUILDBEAR_TOKEN }}"
         env:
-          API_KEY: ${{ secrets.BUILDBEAR_TOKEN }} 
+          BUILDBEAR_BASE_URL: "${{ secrets.BUILDBEAR_BASE_URL }}"
