--- a/.github/workflows/bb-deploy.yml
+++ b/.github/workflows/bb-deploy.yml
@@ -78,8 +78,8 @@ jobs:
         run: forge test
         
       - name: test_ci
-        uses: BuildBearLabs/buildbear_x_action@feat/modify-payload-with-new-api
+        uses: BuildBearLabs/buildbear_x_action@v1.7.0
         with: 
-          buildbear-token: "${{ secrets.BUILDBEAR_TOKEN }}"
+          buildbear-token: "${{ secrets.BUILDBEAR_API_KEY }}"
         env:
           BUILDBEAR_BASE_URL: "${{ secrets.BUILDBEAR_BASE_URL }}"
